Need to ensure whitespace always at the bottom of the content, otherwise dropdowns are cutoff

--- a/src/styles/pages/_pages.scss
+++ b/src/styles/pages/_pages.scss
@@ -5,7 +5,7 @@
 .page {
     padding: 15px;
     // need this whitespace to ensure bootstrap dropdowns don't get cutoff
-    min-height: 350px;
+    margin-bottom: 100px;
 }
 
 .page-form-ele {
